syntax = "proto3";
package protocol_base;
option go_package = "proto/protocol_base";

 

//消息号
enum MSG_BASE {
    PLACEHOLDER_BASE =0;  //占位
    
    //模块id
    Module=100;  //基础模块

    //消息method id
    HeartBeat =101;     //心跳

    NoticeMsg = 103; //错误提示
}

//心跳  1
message c2s_HeartBeat {
}

message s2c_HeartBeat {
    sint32	retcode	= 1;
    int64 Timestamp =2;//服务器时间
}
 
//错误提示消息
message s2c_NoticeMsg { 
    sint32	retcode	= 1;
    string  NoticeMsg =2;
}