syntax = "proto3";
package role;
option go_package = "proto/role";




//用户游戏信息
message Pb_RoleInfo {
    int32 roleID = 1;
    string roleName =2;    
    int64 exp = 3;
    int32 level =4;
    int32 country =5; //所属国家
    map<int32, int32>  TesourcesList = 6;//玩家资源列表
    RoleSettings Settings =7;  //游戏内设置
}

//游戏设置
message RoleSettings {
    bool AutoSelectTactics = 1;//自动选择战术
}

